--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ ktor = "2.3.12"
 ktorKotlinSerialization = "1.8.0"
 
 lifecycleViewmodelKtx = "2.8.6"
+roomRuntimeAndroid = "2.7.0-alpha10"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -39,6 +40,7 @@ ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "kto
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-client-auth = {module = "io.ktor:ktor-client-auth", version.ref = "ktor"}
 ktor-client-logging = {module = "io.ktor:ktor-client-logging", version.ref = "ktor"}
+androidx-room-runtime-android = { group = "androidx.room", name = "room-runtime-android", version.ref = "roomRuntimeAndroid" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
